<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JinLinClient</string>
    <string name="menu_settings">Settings</string>
    
    
    <string name="login_button_title">登录</string>
    <string name="login_user_hint">手机号码/邮箱</string>
    
    <string name="regist_tourist_title">游客</string>
    <string name="regist_other_title">通过第三方合作账号登录</string>
    
    
    <string name="regist_sms_titile">短信验证注册</string>
    <string name="regist_sms_topbar_title">短信验证注册</string>
    <string name="regist_sms_phone_title">请输入手机号码</string>
    <string name="regist_sms_validate_title">输入验证码</string>
    <string name="regist_sms_username_title">用户名</string>
    <string name="regist_sms_password_title">密码</string>
    <string name="regist_sms_confirm">确认密码</string>
    <string name="regist_sms_regist_title">确认注册</string>
    <string name="regist_sms_validate_button_title">获取验证码</string>
    <string name="regist_sms_validate_button_again_title">重新获取</string>
    <string name="regist_sms_hint_username">由3~12个汉字、英文数字组成。</string>
    <string name="regist_sms_hint_passwd">由6~12个英文、数字组成，区分大小写。</string>
    
    <string name="regist_mail_title">邮箱验证注册</string>
    <string name="regist_mail_topbar_title">邮箱注册</string>
    <string name="regist_mail_inputmail_title">请输入电子邮箱</string>

    <string name="regist_error_validation_title">格式不匹配</string>
    <string name="regist_error_confirmpasswd_title">于设置密码不一致</string>
    
    
    <string name="main_bottom_title">便民查询</string>
    <string name="main_points_title">积分系统</string>
    <string name="main_news_title">新闻中心</string>
    <string name="main_forum_title">论坛交流</string>
    <string name="main_communication_select_title">交通查询</string>
    <string name="main_lives_select_title">生活查询</string>
    <string name="main_work_select_title">办事查询</string>
    
    <string name="leftmenu_setting_title">个人设置</string>
    

    <string name="points_xzip_btn_title">查看我的二维码</string>
    <string name="points_mark_btn_title">签到</string>
    <string name="points_balance_title">现有积分{?}点</string>

</resources>