<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_way_bg_2x" >

    <Button
        android:textSize="18sp"
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_1_2x"
        android:text="@string/login_button_title"
        android:textColor="@android:color/white" />

    <EditText
        android:textSize="14sp"
        android:inputType="textPassword"
        android:id="@+id/et_login_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_login"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="-15dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/img_passwd"
        android:background="@drawable/input_bg"
        android:hint="@string/regist_sms_password_title"
        android:paddingLeft="20dp" />

    <ImageView
        android:id="@+id/img_passwd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@id/btn_login"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ico_lock_2x" />

    <EditText
        android:textSize="14sp"
        android:id="@+id/et_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_login_passwd"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="-15dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/img_user"
        android:background="@drawable/input_bg"
        android:hint="@string/login_user_hint"
        android:paddingLeft="20dp"
        android:singleLine="true" />

    <ImageView
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/et_login_passwd"
        android:id="@+id/img_user"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ico_user_2x" />

</RelativeLayout>