<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/regist_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/topbar_bg_3x"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/img_topleft_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/topbar_menu" />

            <ImageView
                android:id="@+id/img_topright_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ico_topbar_setting_3x" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Yummy"
            android:textColor="@color/regist_white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txt_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="未读公告2大条"
                android:textColor="@color/regist_white"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_head"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/txt_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_toRightOf="@id/img_head"
                android:gravity="center"
                android:maxLines="1"
                android:text="新回复9大条"
                android:textColor="@color/regist_white"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@android:color/transparent" >

        <ImageView
            android:id="@+id/img_integration"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:scaleType="centerInside"
            android:src="@drawable/ico_points_3x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/img_integration"
            android:layout_below="@id/img_integration"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/main_points_title"
            android:textColor="@color/main_title_font_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_newspaper"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:src="@drawable/ico_newspaper_3x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/img_newspaper"
            android:layout_below="@id/img_newspaper"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/main_news_title"
            android:textColor="@color/main_title_font_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_forum"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:scaleType="centerInside"
            android:src="@drawable/ico_forum_3x" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/img_forum"
            android:layout_below="@id/img_forum"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/main_forum_title"
            android:textColor="@color/main_title_font_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_bottom_title"
            android:textColor="@color/main_title_font_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ico_traffic_3x" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ico_life_3x" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/ico_arrangement_3x" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_communication_select_title"
                android:textColor="@color/main_title_font_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_lives_select_title"
                android:textColor="@color/main_title_font_color"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_work_select_title"
                android:textColor="@color/main_title_font_color"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>